--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="public/IMG20231215085208-removebg-preview (2) (1).png" />
+    <link rel="icon" type="image/svg+xml" href="public/480442282_1349359656512565_4705522928167712045_n.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PortFoilo</title>
+    <title>Imran_PortFoilo</title>
   </head>
   <body>
     <div id="root"></div>
